--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="https://i.insider.com/602ee9ced3ad27001837f2ac?width=700" width="600" height="600"/>
+    window.location.href = "https://i.insider.com/602ee9ced3ad27001837f2ac?width=700"
 </body>
 </html>
