--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <script>
     window.location.href = "https://i.insider.com/602ee9ced3ad27001837f2ac?width=700"
+    </script>
 </body>
 </html>
